--- a/templates/loanapp/user_loan_history.html
+++ b/templates/loanapp/user_loan_history.html
@@ -71,7 +71,7 @@
     <!--<h1 class="text-center text-primary">Loan Request History</h1>-->
     <div class="my-5 users">
 
-
+<h4>{{ messages }}</h4>
 
         <table class="table text-center table-light table-hover table-bordered table-striped">
             <thead class="bg-light ">
