--- a/templates/new/general/base.html
+++ b/templates/new/general/base.html
@@ -7,7 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="TemplateMo">
+  
+<link rel="shortcut icon" href="/static/assets/images/slider/naira_note8.jpeg">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>SimSudResources</title>
