--- a/templates/new/general/base.html
+++ b/templates/new/general/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
   
-<link rel="shortcut icon" href="/static/assets/images/slider/naira_note8.jpeg">
+<!--<link rel="shortcut icon" href="/static/assets/images/slider/naira_note8.jpeg">-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>SimSudResources</title>
