--- a/templates/loginApp/update/edit.html
+++ b/templates/loginApp/update/edit.html
@@ -44,7 +44,7 @@
                 <div class="mb-4 row">
                     <div class="col">
                         <div class="form-outline">
-                            {% render_field form.username|attr:'required:true' type="text" class="form-control" %}
+                            {% render_field form.username|attr:'required:true'  class="form-control" %}
                             <label class="form-label" for="form6Example1">Username</label>
                         </div>
                     </div>
